--- a/apps/saru/app/globals.css
+++ b/apps/saru/app/globals.css
@@ -73,6 +73,24 @@
         }
     }
 
+    .touch-hitbox {
+        position: relative;
+    }
+
+    .touch-hitbox::before {
+        content: "";
+        position: absolute;
+        display: block;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 100%;
+        height: 100%;
+        min-height: 44px;
+        min-width: 44px;
+        z-index: 9999;
+    }
+
     @media (hover: none) and (pointer: coarse) {
         .hover-trigger:hover * {
             transition-duration: 0ms !important;
